<resources>
    <string name="app_name">Android Class</string>
    <string name="sentence1">Hello world</string>
    <string name="sentence2">Hola Mundo</string>
    <string name="btnChange">click me</string>
    <string name="mensg">It works</string>
    <string name="personimage">PersonImage</string>
    <string name="ej2">Ej2</string>
    <string name="bday">Birth day</string>
    <string name="city">City</string>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="film_image">film image</string>
    <string name="ej3">Ej3</string>
    <string name="star_btn">Star Btn</string>
    <string name="plus_btn">Plus Btn</string>
    <string name="share_btn">Share Btn</string>
    <string name="movie_image">Movie Image</string>
    <string name="release_date">Release Date</string>
    <string name="title">Title</string>
    <string name="original_title">Original title</string>
    <string name="ej4">EJ4</string>


    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_fragment">Fav fragment</string>

</resources>
