<?xml version="1.0" encoding="utf-8"?>
<!--    android:gravity="center" -->
<!--    android:layout_gravity="center" -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/holaworld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sentence1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sentence2"
        />
    <Button
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnChange"
        />

    <Button
        android:id="@+id/btnEj2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ej2" />

    <TextView
        android:id="@+id/txtNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        />

    <Button
        android:id="@+id/btnEj3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/ej3" />

    <Button
        android:id="@+id/ej3Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ej3" />

</LinearLayout>